--- a/lista03_estruturasRepeticao/ex2_sequencia/index.html
+++ b/lista03_estruturasRepeticao/ex2_sequencia/index.html
@@ -29,6 +29,6 @@
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
 		<span id="result">Resultado: </span>
-		<script src="./sequencia.js"></script>
+		<script src="./ex2_sequencia.js"></script>
 	</body>
 </html>
